cmake_minimum_required(VERSION 3.15)
project(Leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(Leetcode "1.Two Sum.cpp" "2.Add Two Numbers.cpp" "3.Longest Substring Without Repeating Characters.cpp" "4.Median of Two Sorted Arrays.cpp" "5.Longest Palindromic Substring.cpp" "6.ZigZag Conversion.cpp" "7.Reverse Integer.cpp")