cmake_minimum_required(VERSION 3.15)
project(Leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(Leetcode "1.TwoSum.cpp" "2.AddTwoNumbers.cpp" "3.LongestSubstringWithoutRepeatingCharacters.cpp" "4.MedianOfTwoSortedArrays.cpp" "5.LongestPalindromicSubstring.cpp" "6.ZigZagConversion.cpp" "7.ReverseInteger.cpp" 8.StringToInteger.cpp 9.PalindromeNumber.cpp 11.ContainerWithMostWater.cpp 312.BurstBalloons.cpp 12.IntegerToRoman.cpp 95.UniqueBinarySearchTreesII.cpp)